# ChangeTexVersion

./: .gitignore  README.md  README.txt
ChangeTexBytes/: ChangeTexBytes.sln
ChangeTexBytes/ChangeTexBytes/: ChangeTexBytes.hpp  ChangeTexBytes.vcxproj  ChangeTexBytes.vcxproj.filters  InputBinFile.cpp  main.cpp
ChangeTexVersion/: CMakeLists.txt  main.cpp
